--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "nestpixel-pulse-api",
   "version": "0.0.1",
   "description": "",
+  "[prisma]": {
+    "editor.formatOnSave": true
+  },
   "author": "",
   "private": true,
   "license": "UNLICENSED",
@@ -23,6 +26,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.9.1",
     "axios": "^1.6.5",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -44,6 +48,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "prisma": "^5.9.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
