--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
+    "date-fns": "^3.3.1",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
